--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Murshid Alam Portfolio</title>
+    <link rel="shortcut icon" href="images/murshid.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="murshid.png" type="image/x-icon">
 </head>
+
 <body>
-    
+    <section class="">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h2><span class="orange-color">Murshid Alam</span> World!</h2>
+            <h3>Build Climber and Train Stopper</h3>
+
+            <p>WordPress Enthusiastic and, Open Source Lover. I also assist in designing, developing and testing
+                websites
+                too!</p>
+
+            <p>I love to contribute to the WordPress Community. I am always happy to meet new peoples in the WordPress
+                community and see how I can help them achieve their goals. When I am not online and WordPress, I love to
+                play football, travel, riding the bike and attend Meetup/WordCamps!</p>
+
+            <p>Over the last few years, I learned web programming and worked with them locally. Before coming to web
+                programming I was mostly involved with Electric Media(Channel i), Newspaper (Priyo, Bhorer Kagoj) and
+                volunteering activities (including NGOs).</p>
+            <a class="link-button" href="https://www.linkedin.com/in/murshidalam/" target="_blank">Hire Me</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/murshid.png" alt="Murshid Alam">
+        </div>
+    </section>
+
 </body>
+
 </html>
