top banner added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="">
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h2><span class="orange-color">Murshid Alam</span> World!</h2>
