--- a/index.html
+++ b/index.html
@@ -31,11 +31,26 @@
             <p>Over the last few years, I learned web programming and worked with them locally. Before coming to web
                 programming I was mostly involved with Electric Media(Channel i), Newspaper (Priyo, Bhorer Kagoj) and
                 volunteering activities (including NGOs).</p>
-            <a class="link-button" href="https://www.linkedin.com/in/murshidalam/" target="_blank">Hire Me</a>
+            <a class="link-button" href="https://www.linkedin.com/in/murshidalam/" target="_blank">HIRE ME</a>
         </div>
 
         <div class="half-width">
             <img src="images/murshid.png" alt="Murshid Alam">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/murshid2.png" alt="Murshid Alam">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h3>
+                <h3>Become a web developer</h3>
+                <p class="right-space">I already learned the basic HTML and CSS. I can build any simple website. I can
+                    even teach my grandma
+                    how to make simple website. My goal is to build 3 websites and learn advanced topics.
+                </p>
+                <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">DOWNLOAD RESUME</a>
         </div>
     </section>
 
