--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="experience-area">
 
-        <h1>Experince</h1>
+        <h1>Experinces</h1>
 
         <div class="flexible-container">
             <div id="full-stack-experience" class="experience-item">
