--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 community and see how I can help them achieve their goals. When I am not online and WordPress, I love to
                 play football, travel, riding the bike and attend Meetup/WordCamps!</p>
 
-            <p>Over the last few years, I learned web programming and worked with them locally. Before coming to web
+            <p class="button-top">Over the last few years, I learned web programming and worked with them locally.
+                Before coming to web
                 programming I was mostly involved with Electric Media(Channel i), Newspaper (Priyo, Bhorer Kagoj) and
                 volunteering activities (including NGOs).</p>
             <a class="link-button" href="https://www.linkedin.com/in/murshidalam/" target="_blank">HIRE ME</a>
@@ -46,7 +47,8 @@
         <div class="half-width">
             <h2>Dream Big</h3>
                 <h3>Become a web developer</h3>
-                <p class="right-space">I already learned the basic HTML and CSS. I can build any simple website. I can
+                <p class="right-space button-top">I already learned the basic HTML and CSS. I can build any simple
+                    website. I can
                     even teach my grandma
                     how to make simple website. My goal is to build 3 websites and learn advanced topics.
                 </p>
@@ -57,7 +59,7 @@
 
     <section class="experience-area">
 
-        <h1>Experinces</h1>
+        <h2>Experinces</h2>
 
         <div class="flexible-container">
             <div id="full-stack-experience" class="experience-item">
